[package]
name = "tableau_rs"
version = "0.1.0"
edition = "2021"
authors = ["Irfan Ghat"]
description = "This crate provides a streamlined interface for interacting with Tableau via Tableau API."
homepage = "https://github.com/lexara-prime-ai/tableau_rs"
repository = "https://github.com/lexara-prime-ai/tableau_rs"
readme = "README.md"
keywords = ["cloud", "web", "http", "api"]
categories = ["web-programming::http-client"]
license = "MIT"

[dependencies]
anyhow = "1.0.89"
dotenvy = "0.15.7"
futures = "0.3.30"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
